--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                   </li>
 
                   <li>
-                     <a href="#Destination" class="nav__link">Destination</a>
+                     <a href="#destination" class="nav__link">Destination</a>
                   </li>
 
                   <li>
-                     <a href="#Review" class="nav__link">Review</a>
+                     <a href="#testimonial" class="nav__link">Review</a>
                   </li>
 
                   <li>
-                     <a href="#Gallery" class="nav__link">Gallery</a>
+                     <a href="#gallery" class="nav__link">Gallery</a>
                   </li>
 
                   <li>
-                     <a href="#Contact" class="nav__link">Contact</a>
+                     <a href="#join" class="nav__link">Contact</a>
                   </li>
                </ul>
 
@@ -410,3 +410,4 @@
       <script src="assets/js/main.js"></script>
    </body>
 </html>
+
